--- a/ThinkingCode/ThinkingCode_Test/ThinkingCode_Test.vcxproj.filters
+++ b/ThinkingCode/ThinkingCode_Test/ThinkingCode_Test.vcxproj.filters
@@ -15,19 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="targetver.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Propositional.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Lazy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -35,7 +26,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="ThinkingCode.cpp">
+    <ClCompile Include="LazyTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
