--- a/ThinkingCode/ThinkingCode_Test/ThinkingCode_Test.vcxproj
+++ b/ThinkingCode/ThinkingCode_Test/ThinkingCode_Test.vcxproj
@@ -161,7 +161,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="LazyTest.cpp" />
+    <ClCompile Include="TupleHelperTest.cpp" />
+    <ClCompile Include="ZipIteratorTest.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
